<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="enterAmt">Enter amount here</string>
    <string name="pax">Enter amount of people</string>
    <string name="no_of_pax">No. of Pax</string>
    <string name="enter_discount">Enter Discount(%)</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="discount">Discount(%)</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="service_charge">Service Charge</string>
    <string name="incld_svc">Incld SVC</string>
    <string name="no_svc">No SVC</string>
    <string name="no_gst">No GST</string>
    <string name="incld_gst">Incld GST</string>
    <string name="total_amount">Total amount: $</string>
    <string name="each_person_pays">Each person pays: $</string>
</resources>